bootstrap-bill/k3d/argocd/installation/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-argocd-server
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`argocd.internal`)
      priority: 12
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argocd.internal`) && Headers(`Content-Type`, `application/grpc`)
      priority: 13
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
